@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><namen>
-	<title>czoyMToiVGhlIEhvbWUgb2YgdG9lbmRhQ01TIjs=</title>
-	<name>czo5OiJ0b2VuZGFDTVMiOw==</name>
-	<key>czoxNjoiWW91ciBpZGVhcyBhaGVhZCI7</key>
+	<title>The Home of toendaCMS</title>
+	<name>toendaCMS</name>
+	<key>Your ideas ahead</key>
 	<logo></logo>
 
 </namen>
