@@ -8,7 +8,7 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 2385</build>
+	<build>Build 2386</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
 	<release_date>13.01.2007 - 16:41</release_date>
